Update API controllers + swagger docs
